[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/cfc/assets/archetypes/flyer.png" type="Texture" id=1]
[ext_resource path="res://addons/cfc/src/dreamscape/MainMenu/ArchetypeButton.gd" type="Script" id=2]

[node name="ArchetypeButton" type="MarginContainer"]
margin_right = 270.0
margin_bottom = 390.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 270.0
margin_bottom = 390.0
rect_min_size = Vector2( 270, 390 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
visible = false
margin_right = 270.0
margin_bottom = 390.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
